deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: life-fit-api-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: life-fit-api
